ch08/ch08-uppercasing-exercise/builder-usage/tests/fails/wrong_type.stderr
error: Can only use uppercase for String type
 --> tests/fails/wrong_type.rs:6:3
  |
6 |   roots_of: i32,
  |   ^^^^^^^^
